<resources>
    <string name="app_name">FlowDocument</string>
    <string name="main_toolbar_tv">欢迎使用中国电信流量凭证客户端!</string>
    <string name="main_container_tv_1">请选择您的用户类型:</string>
    <string name="main_container_tv_2">(仅限中国电信4G用户使用)</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="product_order">产品订购</string>
    <string name="donation_time">时长转赠</string>
    <string name="query_detail">明细查询</string>
    <string name="personal_center">个人中心</string>
    <string name="main_personal_tips">请登录,将有更多惊喜~</string>
    <string name="logout">再按一次退出程序</string>

    <!--register fragment-->
    <string name="email_address">邮箱地址:</string>
    <string name="nickname">昵&#160;&#8201;&#160;&#8201;称:</string>
    <string name="password">密&#160;&#8201;&#160;&#8201;码:</string>
    <string name="sure_password">确认密码:</string>
    <string name="verification_code">验证码:</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="register_tips">*请通过注册邮箱查看验证码邮件,2小时内有效</string>

    <string name="register_success">注册成功!</string>
    <string name="auto_login">自动登陆</string>
    <string name="other_login">其他登陆方式:</string>
    <string name="complete_personal_message">完善个人信息</string>
    <string name="have_time">当前状态:已启用</string>
    <string name="no_time">当前状态:停用</string>

    <string name="how_long_time">可用时长</string>
    <string name="bigger">大于</string>
    <string name="day">天</string>
    <string name="buy_the_time">点击订购时长</string>

    <string name="order_product_tips">请点击上方选择产品</string>
    <string name="order_product_rules">订购业务规则</string>

    <!--donation time-->
    <string name="donation_now_time">当前可转赠时长:</string>
    <string name="donation_minute">143分钟</string>
    <string name="donation_object">转赠对象</string>
    <string name="donation_email">请填写转赠对象电子邮箱</string>
    <string name="donation_how_time">转赠时长</string>
    <string name="donation_input_time">请输入转赠时长</string>
    <string name="minute">分钟</string>
    <string name="donation_v_code">验证码</string>

    <!--personal center-->
    <string name="personal_center_title">个人中心</string>
    <string name="welcome">欢迎您,</string>
    <string name="who">张xx</string>
    <string name="leave_time">您的账户余额时长:</string>
    <string name="personal_center_how_long_time">20天20小时20分钟</string>

    <string name="change_password">修改密码</string>
    <string name="origin_password">原密码:</string>
    <string name="new_password">新密码:</string>

    <string name="order_detail">订购明细</string>
    <string name="use_detail">启用明细</string>
    <string name="donation_detail">转赠明细</string>
    <string name="donation_time_to_other">转赠时间</string>
    <string name="donation_time_other">2016.11.2 20:20</string>
    <string name="donation_user">转入用户:</string>
    <string name="donation_user_email">15088132565@163.com</string>
    <string name="how_long_donation">转出时长:</string>
    <string name="how_long_time_donation_text">50分钟</string>

    <string name="start_time">启用时间:</string>
    <string name="start_how_long">启用时长:</string>
    <string name="order_date">订购日期:</string>
    <string name="use_date">使用有效期:</string>
    <string name="time_and_money">100分钟（10元）</string>

    <!--企业部分enterprise-->
    <string name="enterprise_product_order">产品订购</string>
    <string name="enterprise_access_app">APP接入</string>
    <string name="enterprise_query_detail">明细查询</string>
    <string name="enterprise_center">企业中心</string>

    <string name="enterprise_name">企业名称:</string>
    <string name="enterprise_contract_person">联系人:</string>
    <string name="enterprise_telephone">联系电话:</string>

    <string name="enterprise_dialog_submit_success">提交成功</string>
    <string name="enterprise_dialog_message">请注意注册邮箱通知邮件，2个工作日内反馈注册结果</string>

    <string name="enterprise_app_access_title">APP接入</string>
    <string name="enterprise_app_access_have_no">您暂时未有APP接入</string>
    <string name="enterprise_app_access_tips">点击“新增接入”可新增接入APP</string>
    <string name="enterprise_app_access_rules">接入业务规则</string>

    <string name="enterprise_app_access_name">名称:</string>
    <string name="enterprise_app_access_key">KEY:</string>
    <string name="enterprise_app_access_state">状态:</string>
    <string name="enterprise_app_access_name_m">院线通</string>
    <string name="enterprise_app_access_key_m">uejD3gjDj2heD</string>
    <string name="enterprise_app_access_state_m">已启用</string>
    <string name="enterprise_app_access_app_name">请输入接入APP名称</string>

    <string name="enterprise_center_title">企业中心</string>
    <string name="enterprise_center_welcome">欢迎您,</string>
    <string name="enterprise_center_name">xx有限公司</string>
    <string name="enterprise_center_time">企业账户剩余时间:</string>


</resources>
